cmake_minimum_required(VERSION 3.10)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED True)

project(DeusExLux)

SET(COMPILER_WARNING_FLAGS "-Wall -Wextra -Werror")
SET(COMPILER_OPT_FLAGS "-O3")
SET(COMPILER_MISC_FLAGS "-fconcepts")
SET(SANITIZER_FLAGS "-fsanitize=address -fsanitize=undefined")

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${COMPILER_WARNING_FLAGS} ${COMPILER_OPT_FLAGS} ${COMPILER_INCLUDE_FLAGS} ${COMPILER_MISC_FLAGS} ${SANITIZER_FLAGS}")
SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_CXX_FLAGS} ${LINKER_FLAGS} ${SANITIZER_FLAGS}")

include_directories(${CMAKE_SOURCE_DIR}/src/IO ${CMAKE_SOURCE_DIR}/src/mathBase ${CMAKE_SOURCE_DIR}/src/util ${CMAKE_SOURCE_DIR}/src/raytracer ${CMAKE_SOURCE_DIR}/src/world)

add_executable(DeusExLux ${CMAKE_SOURCE_DIR}/src/DeusExLux.cpp)